--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -141,6 +141,8 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
 							tandem
 							modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+							<p><small>By Kelly D.</small></p>
+
 					</article>
 					<article>
 						<p>Digital Life</p>
@@ -152,6 +154,7 @@
 							tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
 							commodius
 							agimus. An nisi populari fama?</p>
+							<p><small>By William A.</small></p>
 					</article>
 					<article>
 						<p>Social</p>
@@ -163,6 +166,7 @@
 							praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
 							memoria;
 							Apparet statim, quae sint officia, quae actiones.</p>
+							<p><small>By Frances J.</small></p>
 					</article>
 				</div>
 			</div>
@@ -220,9 +224,9 @@
 	<!--Footer-->
 	<footer>
 		<p>234 Washington Street
-		<br>
-		Urbana, Illinois
-	</p>
+			<br>
+			Urbana, Illinois
+		</p>
 		<div>
 			<ul>
 				<a href="#">Terms of Use</a>
