--- a/html_advanced/11-styleguide.html
+++ b/html_advanced/11-styleguide.html
@@ -3,19 +3,20 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" width=device-width, initial-scale=1, viewport-fit=cover>
 	<title>Styleguide - Techium</title>
 	<meta name="description" content="Techium is a digital agency">
-
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png">
+	<link rel="icon" type="image/x-icon" href=./favicon.ico>
+	<link rel="icon" type="image/png" href=./favicon.png>
 </head>
 
 <body>
 	<header></header>
 	<main>
 		<section>
-			<h2>Headings</h2>
+			<header>
+				<h2>Headings</h2>
+			</header>
 			<h1>Heading level 1</h1>
 			<h2>Heading level 2</h2>
 			<h3>Heading level 3</h3>
