--- a/html_advanced/13-styleguide.html
+++ b/html_advanced/13-styleguide.html
@@ -23,7 +23,9 @@
 				</header>
 				<h2>Heading with a subtitle</h2>
 				<p>This is my subtitle</p>
-				<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+				<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non
+					faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
+					varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 			</section>
 			<h1>Heading level 1</h1>
 			<h2>Heading level 2</h2>
