--- a/html_advanced/15-index.html
+++ b/html_advanced/15-index.html
@@ -112,7 +112,10 @@
 			</div>
 			</section>
 	</main>
-	<footer>Footer</footer>
+	<footer>
+		<div>Footer
+		</div>
+		</footer>
 </body>
 
 </html>
