--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -3,40 +3,35 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" width=device-width, initial-scale=1, viewport-fit=cover>
 	<title>Homepage - Techium</title>
 	<meta name="description" content="Techium is a digital agency">
-
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png">
+	<link rel="icon" type="image/x-icon" href=./favicon.ico>
+	<link rel="icon" type="image/png" href=./favicon.png>
 </head>
 
 <body>
-	<br>
-	<!--Header-->
+	<br /><!--Header-->
 	<header>
 		<div>
 			<div>
-				<a href="/html_advanced/">
-					<span>Techium</span>
-				</a>
-				<nav></nav>
-			</div>
+			<link href=html_advanced/>
+			<span>Techium</span>
+			<link href="/html_advanced/">
+		</div>
+			<nav></nav>
 		</div>
 	</header>
-	<br>
-	<!--Main-->
+	<br /><!--Main-->
 	<main>
 		<h1>Homepage</h1>
-		<br>
-		<!-- Hero section-->
+		<br /><!--Hero section-->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
 			</div>
 		</section>
-		<br>
-		<!--Services section-->
+		<br /><!--Services section-->
 		<section>
 			<div>
 				<header>
@@ -53,8 +48,7 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Works section-->
+		<br /><!--Works section-->
 		<section>
 			<div>
 				<header>
@@ -74,8 +68,7 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--About Us section-->
+		<br /><!--About Us section-->
 		<section>
 			<div>
 				<header>
@@ -107,8 +100,7 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Latest news section-->
+		<br /><!--Latest news section-->
 		<section>
 			<div>
 				<header>
@@ -143,8 +135,7 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Testimonials section-->
+		<br /><!--Testimonials section-->
 		<section>
 			<div>
 				<header>
@@ -158,10 +149,9 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Contact section-->
-		<div>
-			<section>
+		<br /><!--Contact section-->
+		<section>
+			<div>
 				<header>
 					<h2>Contact</h2>
 					<p>We like to know new people</p>
@@ -171,11 +161,10 @@
 						modo? At
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
-		</div>
+			</div>
 		</section>
 	</main>
-	<br>
-	<!--Footer-->
+	<br /><!--Footer-->
 	<footer>
 		<div>Footer</div>
 	</footer>
