--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -3,49 +3,43 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" width=device-width, initial-scale=1, viewport-fit=cover>
 	<title>Homepage - Techium</title>
 	<meta name="description" content="Techium is a digital agency">
-
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png">
+	<link rel="icon" type="image/x-icon" href=./favicon.ico>
+	<link rel="icon" type="image/png" href=./favicon.png>
 </head>
 
 <body>
-	<br>
-	<!--Header-->
+	<br /><!--Header-->
 	<header>
 		<div>
 			<div>
-				<a href="/html_advanced/">
-					<span>Techium</span>
-				</a>
-				<nav>
-					<a href="/html_advanced/">Home</a>
-					<a href="servcices">Services</a>
-					<a href="works">Works</a>
-					<a href="about">about</a>
-					<a href="latest_news">Latest news</a>
-					<a href="testimonials">Testimonials</a>
-					<a href="contact">Contact</a>
-
-				</nav>
+				<link href=html_advanced />
+				<span>Techium</span>
+				<link href="/html_advanced/">
 			</div>
+			<nav>
+				<link href="/Home">
+				<a href="services">Services</a>
+				<a href="works">Works</a>
+				<a href="about">About</a>
+				<a href="latest_news">Latest news</a>
+				<a href="testimonials">Testimonials</a>
+				<a href="contact">Contact</a>
+			</nav>
 		</div>
 	</header>
-	<br>
-	<!--Main-->
+	<br /><!--Main-->
 	<main>
 		<h1>Homepage</h1>
-		<br>
-		<!-- Hero section-->
+		<br /><!--Hero section-->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
 			</div>
 		</section>
-		<br>
-		<!--Services section-->
+		<br /><!--Services section-->
 		<section>
 			<div>
 				<header>
@@ -62,8 +56,7 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Works section-->
+		<br /><!--Works section-->
 		<section>
 			<div>
 				<header>
@@ -83,8 +76,7 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--About Us section-->
+		<br /><!--About Us section-->
 		<section>
 			<div>
 				<header>
@@ -116,8 +108,7 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Latest news section-->
+		<br /><!--Latest news section-->
 		<section>
 			<div>
 				<header>
@@ -152,8 +143,7 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Testimonials section-->
+		<br /><!--Testimonials section-->
 		<section>
 			<div>
 				<header>
@@ -167,10 +157,9 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Contact section-->
-		<div>
-			<section>
+		<br /><!--Contact section-->
+		<section>
+			<div>
 				<header>
 					<h2>Contact</h2>
 					<p>We like to know new people</p>
@@ -180,11 +169,10 @@
 						modo? At
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
-		</div>
+			</div>
 		</section>
 	</main>
-	<br>
-	<!--Footer-->
+	<br /><!--Footer-->
 	<footer>
 		<div>Footer</div>
 	</footer>
