--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -11,27 +11,31 @@
 </head>
 
 <body>
-	<br /><!--Header-->
+
+	<!-- Header -->
 	<header>
 		<div>
 			<div>
-			<link href=html_advanced/>
-			<span>Techium</span>
-			<link href="/html_advanced/">
-		</div>
-			<nav></nav>
+				<a href="/">
+					<span>Techium</span>
+				</a>
+				<nav></nav>
+			</div>
 		</div>
 	</header>
-	<br /><!--Main-->
+	
+	<!-- Main -->
 	<main>
 		<h1>Homepage</h1>
-		<br /><!--Hero section-->
+		
+		<!-- Hero section -->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
 			</div>
 		</section>
-		<br /><!--Services section-->
+		
+		<!-- Services section -->
 		<section>
 			<div>
 				<header>
@@ -48,7 +52,8 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--Works section-->
+		
+		<!-- Works sectio -->
 		<section>
 			<div>
 				<header>
@@ -68,7 +73,8 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--About Us section-->
+		
+		<!-- About Us section -->
 		<section>
 			<div>
 				<header>
@@ -100,7 +106,8 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--Latest news section-->
+		
+		<!-- Latest news section -->
 		<section>
 			<div>
 				<header>
@@ -135,7 +142,8 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--Testimonials section-->
+		
+		<!-- Testimonials section -->
 		<section>
 			<div>
 				<header>
@@ -149,7 +157,8 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--Contact section-->
+		
+		<!-- Contact section -->
 		<section>
 			<div>
 				<header>
@@ -164,7 +173,8 @@
 			</div>
 		</section>
 	</main>
-	<br /><!--Footer-->
+	
+	<!-- Footer -->
 	<footer>
 		<div>Footer</div>
 	</footer>
