--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-	<!--Header-->
+	<!-- Header -->
 	<header>
 		<div>
 			<span>Techium</span>
@@ -20,18 +20,18 @@
 		</div>
 	</header>
 	
-	<!--Main-->
+	<!-- Main -->
 	<main>
 		<h1>Homepage</h1>
 		
-		<!--Hero section-->
+		<!-- Hero section -->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
 			</div>
 		</section>
 		
-		<!--Services section-->
+		<!-- Services section -->
 		<section>
 			<div>
 				<header>
@@ -49,7 +49,7 @@
 			</div>
 		</section>
 		
-		<!--Works section-->
+		<!-- Works sectio -->
 		<section>
 			<div>
 				<header>
@@ -70,7 +70,7 @@
 			</div>
 		</section>
 		
-		<!--About Us section-->
+		<!-- About Us section -->
 		<section>
 			<div>
 				<header>
@@ -103,7 +103,7 @@
 			</div>
 		</section>
 		
-		<!--Latest news section-->
+		<!-- Latest news section -->
 		<section>
 			<div>
 				<header>
@@ -139,7 +139,7 @@
 			</div>
 		</section>
 		
-		<!--Testimonials section-->
+		<!-- Testimonials section -->
 		<section>
 			<div>
 				<header>
@@ -154,7 +154,7 @@
 			</div>
 		</section>
 		
-		<!--Contact section-->
+		<!-- Contact section -->
 		<section>
 			<div>
 				<header>
@@ -170,7 +170,7 @@
 		</section>
 	</main>
 	
-	<!--Footer-->
+	<!-- Footer -->
 	<footer>
 		<div>Footer</div>
 	</footer>
