--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -11,36 +11,42 @@
 </head>
 
 <body>
-	<br /><!--Header-->
+
+	<!-- Header -->
 	<header>
 		<div>
 			<div>
-				<link href=html_advanced />
-				<span>Techium</span>
-				<link href="/html_advanced/">
+				<a href="/">
+					<span>Techium</span>
+				</a>
+				<nav>
+					<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="#services">Services</a></li>
+						<li><a href="#works">Works</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#latest_news">Latest news</a></li>
+						<li><a href="#testimonials">Testimonials</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
 			</div>
-			<nav>
-				<link href="/Home">
-				<a href="services">Services</a>
-				<a href="works">Works</a>
-				<a href="about">About</a>
-				<a href="latest_news">Latest news</a>
-				<a href="testimonials">Testimonials</a>
-				<a href="contact">Contact</a>
-			</nav>
 		</div>
 	</header>
-	<br /><!--Main-->
+
+	<!-- Main -->
 	<main>
 		<h1>Homepage</h1>
-		<br /><!--Hero section-->
+
+		<!-- Hero section -->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
 			</div>
 		</section>
-		<br /><!--Services section-->
-		<section>
+
+		<!-- Services section -->
+		<section id="services">
 			<div>
 				<header>
 					<h2>Services</h2>
@@ -56,8 +62,9 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--Works section-->
-		<section>
+
+		<!-- Works sectio -->
+		<section id="works">
 			<div>
 				<header>
 					<h2>Works</h2>
@@ -76,8 +83,9 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--About Us section-->
-		<section>
+
+		<!-- About Us section -->
+		<section id="about">
 			<div>
 				<header>
 					<h2>About Us</h2>
@@ -108,8 +116,9 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--Latest news section-->
-		<section>
+
+		<!-- Latest news section -->
+		<section id="latest_news">
 			<div>
 				<header>
 					<h2>Latest news</h2>
@@ -143,8 +152,9 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--Testimonials section-->
-		<section>
+
+		<!-- Testimonials section -->
+		<section id="testimonials">
 			<div>
 				<header>
 					<h2>Testimonials</h2>
@@ -157,8 +167,9 @@
 				</div>
 			</div>
 		</section>
-		<br /><!--Contact section-->
-		<section>
+
+		<!-- Contact section -->
+		<section id="contact">
 			<div>
 				<header>
 					<h2>Contact</h2>
@@ -172,7 +183,8 @@
 			</div>
 		</section>
 	</main>
-	<br /><!--Footer-->
+
+	<!-- Footer -->
 	<footer>
 		<div>Footer</div>
 	</footer>
