--- a/html_advanced/contact.html
+++ b/html_advanced/contact.html
@@ -3,40 +3,39 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" width=device-width, initial-scale=1, viewport-fit=cover>
 	<title>Contact - Techium</title>
 	<meta name="description" content="Techium is a digital agency">
-
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png">
+	<link rel="icon" type="image/x-icon" href=./favicon.ico>
+	<link rel="icon" type="image/png" href=./favicon.png>
 </head>
 
 <body>
-	<br>
-	<!--Header-->
+
+	<!-- Header -->
 	<header>
 		<div>
 			<div>
-				<a href="/html_advanced/">
+				<a href="/">
 					<span>Techium</span>
 				</a>
 				<nav></nav>
 			</div>
 		</div>
 	</header>
-	<br>
-	<!--Main-->
+	
+	<!-- Main -->
 	<main>
 		<h1>Homepage</h1>
-		<br>
-		<!-- Hero section-->
+		
+		<!-- Hero section -->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
 			</div>
 		</section>
-		<br>
-		<!--Services section-->
+		
+		<!-- Services section -->
 		<section>
 			<div>
 				<header>
@@ -53,8 +52,8 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Works section-->
+		
+		<!-- Works sectio -->
 		<section>
 			<div>
 				<header>
@@ -74,8 +73,8 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--About Us section-->
+		
+		<!-- About Us section -->
 		<section>
 			<div>
 				<header>
@@ -107,8 +106,8 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Latest news section-->
+		
+		<!-- Latest news section -->
 		<section>
 			<div>
 				<header>
@@ -143,8 +142,8 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Testimonials section-->
+		
+		<!-- Testimonials section -->
 		<section>
 			<div>
 				<header>
@@ -158,10 +157,10 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Contact section-->
-		<div>
-			<section>
+		
+		<!-- Contact section -->
+		<section>
+			<div>
 				<header>
 					<h2>Contact</h2>
 					<p>We like to know new people</p>
@@ -171,11 +170,11 @@
 						modo? At
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
-		</div>
+			</div>
 		</section>
 	</main>
-	<br>
-	<!--Footer-->
+	
+	<!-- Footer -->
 	<footer>
 		<div>Footer</div>
 	</footer>
