--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -3,51 +3,51 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" width=device-width, initial-scale=1, viewport-fit=cover>
 	<title>Homepage - Techium</title>
 	<meta name="description" content="Techium is a digital agency">
-
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png">
+	<link rel="icon" type="image/x-icon" href=./favicon.ico>
+	<link rel="icon" type="image/png" href=./favicon.png>
 </head>
 
 <body>
-	<br>
-	<!--Header-->
+
+	<!-- Header -->
 	<header>
 		<div>
 			<div>
-				<a href="/html_advanced/">
+				<a href="/">
 					<span>Techium</span>
 				</a>
 				<nav>
-					<a href="/html_advanced/">Home</a>
-					<a href="servcices">Services</a>
-					<a href="works">Works</a>
-					<a href="about">about</a>
-					<a href="latest_news">Latest news</a>
-					<a href="testimonials">Testimonials</a>
-					<a href="contact">Contact</a>
-
+					<ul>
+						<li><a href="/">Home</a></li>
+						<li><a href="#services">Services</a></li>
+						<li><a href="#works">Works</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#latest_news">Latest news</a></li>
+						<li><a href="#testimonials">Testimonials</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
 				</nav>
 			</div>
 		</div>
 	</header>
-	<br>
-	<!--Main-->
+
+	<!-- Main -->
 	<main>
 		<h1>Homepage</h1>
-		<br>
-		<!-- Hero section-->
+
+		<!-- Hero section -->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
+				<a href="#">Get started</a>
 			</div>
-			<a href="#">Get started</a>
 		</section>
-		<br>
-		<!--Services section-->
-		<section>
+
+		<!-- Services section -->
+		<section id="services">
 			<div>
 				<header>
 					<h2>Services</h2>
@@ -63,9 +63,9 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Works section-->
-		<section>
+
+		<!-- Works section -->
+		<section id="works">
 			<div>
 				<header>
 					<h2>Works</h2>
@@ -84,9 +84,9 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--About Us section-->
-		<section>
+
+		<!-- About Us section -->
+		<section id="about">
 			<div>
 				<header>
 					<h2>About Us</h2>
@@ -115,12 +115,12 @@
 						maxime
 						cum!</p>
 				</div>
-				<a href="about.html">Learn more about us</a>
+				<a href="/html_advanced/about.html">Learn more about us</a>
 			</div>
 		</section>
-		<br>
-		<!--Latest news section-->
-		<section>
+
+		<!-- Latest news section -->
+		<section id="latest_news">
 			<div>
 				<header>
 					<h2>Latest news</h2>
@@ -154,9 +154,9 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Testimonials section-->
-		<section>
+
+		<!-- Testimonials section -->
+		<section id="testimonials">
 			<div>
 				<header>
 					<h2>Testimonials</h2>
@@ -169,10 +169,10 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Contact section-->
-		<div>
-			<section>
+
+		<!-- Contact section -->
+		<section id="contact">
+			<div>
 				<header>
 					<h2>Contact</h2>
 					<p>We like to know new people</p>
@@ -182,11 +182,11 @@
 						modo? At
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
-			<a href="contact.html">Get in touch</a>
-		</div>
+				<a href="/html_advanced/contact.html">Get in touch</a>
+			</div>
 		</section>
 	</main>
-	<br>
+
 	<!--Footer-->
 	<footer>
 		<div>
