--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -42,7 +42,7 @@
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
-				<a href="#">Get started</a>
+				<a href="#">Get started</a> <!-- Added link to # with the text Get started -->
 			</div>
 		</section>
 
@@ -64,7 +64,7 @@
 			</div>
 		</section>
 
-		<!-- Works section -->
+		<!-- Works sectio -->
 		<section id="works">
 			<div>
 				<header>
@@ -115,7 +115,7 @@
 						maxime
 						cum!</p>
 				</div>
-				<a href="/html_advanced/about.html">Learn more about us</a>
+				<a href="about.html">Learn more about us</a> <!-- Added link to about.html with text Learn more about us -->
 			</div>
 		</section>
 
@@ -182,12 +182,12 @@
 						modo? At
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
-				<a href="/html_advanced/contact.html">Get in touch</a>
+				<a href="contact.html">Get in touch</a> <!-- Added link to contact.html with text Get in touch -->
 			</div>
 		</section>
 	</main>
 
-	<!--Footer-->
+	<!-- Footer -->
 	<footer>
 		<div>
 			<a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
