--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -42,7 +42,7 @@
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
-				<a href="#">Get started</a>
+				<a href="#">Get started</a> <!-- Added link to # with the text Get started -->
 			</div>
 		</section>
 
@@ -54,12 +54,24 @@
 					<p>We work with you</p>
 				</header>
 				<div>
-					<a href="#"><h3>Design & Concept</h3></a>
-					<a href="#"><h3>Digital Strategy</h3></a>
-					<a href="#"><h3>Content Strategy</h3></a>
-					<a href="#"><h3>UX Design</h3></a>
-					<a href="#"><h3>Web Development</h3></a>
-					<a href="#"><h3>Social Media</h3></a>
+					<a href="#">
+						<h3>Design & Concept</h3>
+					</a>
+					<a href="#">
+						<h3>Digital Strategy</h3>
+					</a>
+					<a href="#">
+						<h3>Content Strategy</h3>
+					</a>
+					<a href="#">
+						<h3>UX Design</h3>
+					</a>
+					<a href="#">
+						<h3>Web Development</h3>
+					</a>
+					<a href="#">
+						<h3>Social Media</h3>
+					</a>
 				</div>
 			</div>
 		</section>
@@ -115,7 +127,8 @@
 						maxime
 						cum!</p>
 				</div>
-				<a href="/html_advanced/about.html">Learn more about us</a>
+				<a href="about.html">Learn more about us</a>
+				<!-- Added link to about.html with text Learn more about us -->
 			</div>
 		</section>
 
@@ -182,12 +195,12 @@
 						modo? At
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
-				<a href="/html_advanced/contact.html">Get in touch</a>
+				<a href="contact.html">Get in touch</a> <!-- Added link to contact.html with text Get in touch -->
 			</div>
 		</section>
 	</main>
 
-	<!--Footer-->
+	<!-- Footer -->
 	<footer>
 		<div>
 			<a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
