--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -42,7 +42,7 @@
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
-				<a href="#">Get started</a> <!-- Added link to # with the text Get started -->
+				<a href="#">Get started</a>
 			</div>
 		</section>
 
@@ -64,7 +64,7 @@
 			</div>
 		</section>
 
-		<!-- Works sectio -->
+		<!-- Works section -->
 		<section id="works">
 			<div>
 				<header>
