--- a/html_advanced/23-index.html
+++ b/html_advanced/23-index.html
@@ -42,7 +42,7 @@
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
-				<a href="#">Get started</a> <!-- Added link to # with the text Get started -->
+				<a href="#">Get started</a>
 			</div>
 		</section>
 
@@ -54,24 +54,12 @@
 					<p>We work with you</p>
 				</header>
 				<div>
-					<a href="#">
-						<h3>Design & Concept</h3>
-					</a>
-					<a href="#">
-						<h3>Digital Strategy</h3>
-					</a>
-					<a href="#">
-						<h3>Content Strategy</h3>
-					</a>
-					<a href="#">
-						<h3>UX Design</h3>
-					</a>
-					<a href="#">
-						<h3>Web Development</h3>
-					</a>
-					<a href="#">
-						<h3>Social Media</h3>
-					</a>
+					<h3><a href="#">Design & Concept</a></h3>
+					<h3><a href="#">Digital Strategy</a></h3>
+					<h3><a href="#">Content Strategy</a></h3>
+					<h3><a href="#">UX Design</a></h3>
+					<h3><a href="#">Web Development</a></h3>
+					<h3><a href="#">Social Media</a></h3>
 				</div>
 			</div>
 		</section>
@@ -85,13 +73,13 @@
 				</header>
 				<div>
 					<article>
-						<a href="#"><h3>Interior Design</h3></a>
+						<h3><a href="#">Interior Design</a></h3>
 					</article>
 					<article>
-						<a href="#"><h3>Web Development</h3></a>
+						<h3><a href="#">Web Development</a></h3>
 					</article>
 					<article>
-						<a href="#"><h3>Personal Brand</h3></a>
+						<h3><a href="#">Personal Brand</a></h3>
 					</article>
 				</div>
 			</div>
@@ -128,7 +116,6 @@
 						cum!</p>
 				</div>
 				<a href="about.html">Learn more about us</a>
-				<!-- Added link to about.html with text Learn more about us -->
 			</div>
 		</section>
 
@@ -141,14 +128,14 @@
 				<div>
 					<article>
 						<p>Career</p>
-						<a href="#"><h3>Hoc loco tenere se Triarius non potuit.</h3></a>
+						<h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
 							tandem
 							modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
 					</article>
 					<article>
 						<p>Digital Life</p>
-						<a href="#"><h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3></a>
+						<h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille:
 							Ain
 							tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
@@ -157,7 +144,7 @@
 					</article>
 					<article>
 						<p>Social</p>
-						<a href="#"><h3>Bestiarum vero nullum iudicium puto.</h3></a>
+						<h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a
 							Chrysippo
 							praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
@@ -195,7 +182,7 @@
 						modo? At
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
-				<a href="contact.html">Get in touch</a> <!-- Added link to contact.html with text Get in touch -->
+				<a href="contact.html">Get in touch</a>
 			</div>
 		</section>
 	</main>
@@ -209,5 +196,4 @@
 		</div>
 	</footer>
 </body>
-
 </html>
