--- a/html_advanced/25-index.html
+++ b/html_advanced/25-index.html
@@ -3,52 +3,51 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" width=device-width, initial-scale=1, viewport-fit=cover>
 	<title>Homepage - Techium</title>
 	<meta name="description" content="Techium is a digital agency">
-
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png">
+	<link rel="icon" type="image/x-icon" href=./favicon.ico>
+	<link rel="icon" type="image/png" href=./favicon.png>
 </head>
 
 <body>
-	<br>
-	<!--Header-->
+
+	<!-- Header -->
 	<header>
 		<div>
 			<div>
-				<a href="/html_advanced/">
+				<a href="/">
 					<span>Techium</span>
 				</a>
 				<nav>
 					<ul>
-						<li><a href="/html_advanced/">Home</a></li>
-						<li><a href="servcices">Services</a></li>
-						<li><a href="works">Works</a></li>
-						<li><a href="about">about</a></li>
-						<li><a href="latest_news">Latest news</a></li>
-						<li><a href="testimonials">Testimonials</a></li>
-						<li><a href="contact">Contact</a></li>	
+						<li><a href="/">Home</a></li>
+						<li><a href="#services">Services</a></li>
+						<li><a href="#works">Works</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#latest_news">Latest news</a></li>
+						<li><a href="#testimonials">Testimonials</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
 		</div>
 	</header>
-	<br>
-	<!--Main-->
+
+	<!-- Main -->
 	<main>
 		<h1>Homepage</h1>
-		<br>
-		<!-- Hero section-->
+
+		<!-- Hero section -->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
+				<a href="#">Get started</a>
 			</div>
-			<a href="#">Get started</a>
 		</section>
-		<br>
-		<!--Services section-->
-		<section>
+
+		<!-- Services section -->
+		<section id="services">
 			<div>
 				<header>
 					<h2>Services</h2>
@@ -64,9 +63,9 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Works section-->
-		<section>
+
+		<!-- Works section -->
+		<section id="works">
 			<div>
 				<header>
 					<h2>Works</h2>
@@ -74,26 +73,20 @@
 				</header>
 				<div>
 					<article>
-						<a href="#">
-							<h3>Interior Design</h3>
-						</a>
+						<h3><a href="#">Interior Design</a></h3>
 					</article>
 					<article>
-						<a href="#">
-							<h3>Web Development</h3>
-						</a>
+						<h3><a href="#">Web Development</a></h3>
 					</article>
 					<article>
-						<a href="#">
-							<h3>Personal Brand</h3>
-						</a>
+						<h3><a href="#">Personal Brand</a></h3>
 					</article>
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--About Us section-->
-		<section>
+
+		<!-- About Us section -->
+		<section id="about">
 			<div>
 				<header>
 					<h2>About Us</h2>
@@ -125,9 +118,9 @@
 				<a href="about.html">Learn more about us</a>
 			</div>
 		</section>
-		<br>
-		<!--Latest news section-->
-		<section>
+
+		<!-- Latest news section -->
+		<section id="latest_news">
 			<div>
 				<header>
 					<h2>Latest news</h2>
@@ -135,18 +128,14 @@
 				<div>
 					<article>
 						<p>Career</p>
-						<a href="#">
-							<h3>Hoc loco tenere se Triarius non potuit.</h3>
-						</a>
+						<h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
 							tandem
 							modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
 					</article>
 					<article>
 						<p>Digital Life</p>
-						<a href="#">
-							<h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-						</a>
+						<h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille:
 							Ain
 							tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
@@ -155,9 +144,7 @@
 					</article>
 					<article>
 						<p>Social</p>
-						<a href="#">
-							<h3>Bestiarum vero nullum iudicium puto.</h3>
-						</a>
+						<h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a
 							Chrysippo
 							praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
@@ -167,9 +154,9 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Testimonials section-->
-		<section>
+
+		<!-- Testimonials section -->
+		<section id="testimonials">
 			<div>
 				<header>
 					<h2>Testimonials</h2>
@@ -182,10 +169,10 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Contact section-->
-		<div>
-			<section>
+
+		<!-- Contact section -->
+		<section id="contact">
+			<div>
 				<header>
 					<h2>Contact</h2>
 					<p>We like to know new people</p>
@@ -196,25 +183,26 @@
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
 				<a href="contact.html">Get in touch</a>
-		</div>
+			</div>
 		</section>
 	</main>
-	<br>
-	<!--Footer-->
+
+	<!-- Footer -->
 	<footer>
 		<div>
 			<div>
 				<ul>
-					<a href="#">Terms of Use</a>
+					<a href="#">Termes of Use</a>
 					<a href="#">Privacy Policy</a>
 					<a href="#">Cookie Policy</a>
 				</ul>
 			</div>
 			<ul>
-			<li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-			<li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-			<li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-		</ul></div>
+				<li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+				<li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+				<li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+			</ul>
+		</div>
 	</footer>
 </body>
 
