--- a/html_advanced/30-styleguide.html
+++ b/html_advanced/30-styleguide.html
@@ -3,12 +3,11 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" width=device-width, initial-scale=1, viewport-fit=cover>
 	<title>Styleguide - Techium</title>
 	<meta name="description" content="Techium is a digital agency">
-
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png">
+	<link rel="icon" type="image/x-icon" href=./favicon.ico>
+	<link rel="icon" type="image/png" href=./favicon.png>
 </head>
 
 <body>
@@ -35,7 +34,7 @@
 				faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan
 				varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 		</section>
-		<br>
+
 		<!--Lists-->
 		<section>
 			<header>
@@ -67,7 +66,7 @@
 				</dl>
 			</div>
 		</section>
-		<br>
+
 		<!--Horinzontal rule-->
 		<section>
 			<header>
@@ -77,7 +76,7 @@
 				<hr>
 			</div>
 		</section>
-		<br>
+
 		<!--Blockquotes-->
 		<section>>
 			<header>
