--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -3,52 +3,51 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+	<meta name="viewport" width=device-width, initial-scale=1, viewport-fit=cover>
 	<title>Homepage - Techium</title>
 	<meta name="description" content="Techium is a digital agency">
-
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
-	<link rel="icon" type="image/png" href="/favicon-32x32.png">
+	<link rel="icon" type="image/x-icon" href=./favicon.ico>
+	<link rel="icon" type="image/png" href=./favicon.png>
 </head>
 
 <body>
-	<br>
-	<!--Header-->
+
+	<!-- Header -->
 	<header>
 		<div>
 			<div>
-				<a href="/html_advanced/">
+				<a href="/">
 					<span>Techium</span>
 				</a>
 				<nav>
 					<ul>
-						<li><a href="/html_advanced/">Home</a></li>
-						<li><a href="servcices">Services</a></li>
-						<li><a href="works">Works</a></li>
-						<li><a href="about">about</a></li>
-						<li><a href="latest_news">Latest news</a></li>
-						<li><a href="testimonials">Testimonials</a></li>
-						<li><a href="contact">Contact</a></li>
+						<li><a href="/">Home</a></li>
+						<li><a href="#services">Services</a></li>
+						<li><a href="#works">Works</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#latest_news">Latest news</a></li>
+						<li><a href="#testimonials">Testimonials</a></li>
+						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
 		</div>
 	</header>
-	<br>
-	<!--Main-->
+
+	<!-- Main -->
 	<main>
 		<h1>Homepage</h1>
-		<br>
-		<!-- Hero section-->
+
+		<!-- Hero section -->
 		<section>
 			<div>
 				<h2>We help you build your brand!</h2>
+				<a href="#">Get started</a>
 			</div>
-			<a href="#">Get started</a>
 		</section>
-		<br>
-		<!--Services section-->
-		<section>
+
+		<!-- Services section -->
+		<section id="services">
 			<div>
 				<header>
 					<h2>Services</h2>
@@ -64,9 +63,9 @@
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Works section-->
-		<section>
+
+		<!-- Works section -->
+		<section id="works">
 			<div>
 				<header>
 					<h2>Works</h2>
@@ -74,26 +73,20 @@
 				</header>
 				<div>
 					<article>
-						<a href="#">
-							<h3>Interior Design</h3>
-						</a>
+						<h3><a href="#">Interior Design</a></h3>
 					</article>
 					<article>
-						<a href="#">
-							<h3>Web Development</h3>
-						</a>
+						<h3><a href="#">Web Development</a></h3>
 					</article>
 					<article>
-						<a href="#">
-							<h3>Personal Brand</h3>
-						</a>
+						<h3><a href="#">Personal Brand</a></h3>
 					</article>
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--About Us section-->
-		<section>
+
+		<!-- About Us section -->
+		<section id="about">
 			<div>
 				<header>
 					<h2>About Us</h2>
@@ -125,9 +118,9 @@
 				<a href="about.html">Learn more about us</a>
 			</div>
 		</section>
-		<br>
-		<!--Latest news section-->
-		<section>
+
+		<!-- Latest news section -->
+		<section id="latest_news">
 			<div>
 				<header>
 					<h2>Latest news</h2>
@@ -135,78 +128,71 @@
 				<div>
 					<article>
 						<p>Career</p>
-						<a href="#">
-							<h3>Hoc loco tenere se Triarius non potuit.</h3>
-						</a>
+						<h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
 							tandem
 							modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-							<p><small>By Kelly D.</small></p>
-
+						<p>By Kelly D.</p>
 					</article>
 					<article>
 						<p>Digital Life</p>
-						<a href="#">
-							<h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
-						</a>
+						<h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille:
 							Ain
 							tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
 							commodius
 							agimus. An nisi populari fama?</p>
-							<p><small>By William A.</small></p>
+						<p>By William A.</p>
 					</article>
 					<article>
 						<p>Social</p>
-						<a href="#">
-							<h3>Bestiarum vero nullum iudicium puto.</h3>
-						</a>
+						<h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a
 							Chrysippo
 							praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
 							memoria;
 							Apparet statim, quae sint officia, quae actiones.</p>
-							<p><small>By Frances J.</small></p>
+						<p>By Frances J.</p>
 					</article>
 				</div>
 			</div>
 		</section>
-		<br>
-		<!--Testimonials section-->
-		<section>
+
+		<!-- Testimonials section -->
+		<section id="testimonials">
 			<div>
 				<header>
 					<h2>Testimonials</h2>
 					<p>We are more than a digital company</p>
-				</header>
-				<div>
-					<article>
-						<blockquote>
-							<p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!
-								<cite>Yuri Y.</cite>
-							</p>
-						</blockquote>
-					</article>
-					<article>
-						<blockquote>
-							<p>Thank you so much for your help. Techium company is awesome!<cite>Dorrie S.
-								</cite></p>
-						</blockquote>
-					</article>
-					<article>
-						<blockquote>
-							<p>I love your system. Definitely worth the investment. I'd be lost without Techium company.
-								<cite>Sven H.</cite>
-							</p>
-						</blockquote>
-					</article>
-				</div>
+					</header>
+					<div>
+						<article>
+							<blockquote>
+								<p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+									<cite>Yuri Y.</cite>
+								</p>
+							</blockquote>
+						</article>
+						<article>
+							<blockquote>
+								<p>Thank you so much for your help. Techium company is awesome!<cite>Dorrie S.
+									</cite></p>
+							</blockquote>
+						</article>
+						<article>
+							<blockquote>
+								<p>I love your system. Definitely worth the investment. I'd be lost without Techium company.
+									<cite>Sven H.</cite>
+								</p>
+							</blockquote>
+						</article>
+					</div>
 			</div>
 		</section>
-		<br>
-		<!--Contact section-->
-		<div>
-			<section>
+
+		<!-- Contact section -->
+		<section id="contact">
+			<div>
 				<header>
 					<h2>Contact</h2>
 					<p>We like to know new people</p>
@@ -217,16 +203,12 @@
 						eum nihili facit; Quae contraria sunt his, malane?</p>
 				</div>
 				<a href="contact.html">Get in touch</a>
-		</div>
+			</div>
 		</section>
 	</main>
-	<br>
-	<!--Footer-->
+
+	<!-- Footer -->
 	<footer>
-		<p>234 Washington Street
-			<br>
-			Urbana, Illinois
-		</p>
 		<div>
 			<ul>
 				<a href="#">Terms of Use</a>
@@ -243,6 +225,8 @@
 				<li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
 			</ul>
 		</div>
+		<!-- Address added to the footer -->
+		<p>234 Washington Street<br> Urbana, Illinois</p>
 	</footer>
 </body>
 
