--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -132,7 +132,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo
 							tandem
 							modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
-						<p>By Kelly D.</p>
+						<p><small>By Kelly D.</small></p>
 					</article>
 					<article>
 						<p>Digital Life</p>
@@ -142,7 +142,7 @@
 							tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos
 							commodius
 							agimus. An nisi populari fama?</p>
-						<p>By William A.</p>
+							<p><small>By William A.</small></p>
 					</article>
 					<article>
 						<p>Social</p>
@@ -152,7 +152,7 @@
 							praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
 							memoria;
 							Apparet statim, quae sint officia, quae actiones.</p>
-						<p>By Frances J.</p>
+							<p><small>By Frances J.</small></p>
 					</article>
 				</div>
 			</div>
@@ -164,29 +164,29 @@
 				<header>
 					<h2>Testimonials</h2>
 					<p>We are more than a digital company</p>
-					</header>
-					<div>
-						<article>
-							<blockquote>
-								<p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!
-									<cite>Yuri Y.</cite>
-								</p>
-							</blockquote>
-						</article>
-						<article>
-							<blockquote>
-								<p>Thank you so much for your help. Techium company is awesome!<cite>Dorrie S.
-									</cite></p>
-							</blockquote>
-						</article>
-						<article>
-							<blockquote>
-								<p>I love your system. Definitely worth the investment. I'd be lost without Techium company.
-									<cite>Sven H.</cite>
-								</p>
-							</blockquote>
-						</article>
-					</div>
+				</header>
+				<div>
+					<article>
+						<blockquote>
+							<p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+								<cite>Yuri Y.</cite>
+							</p>
+						</blockquote>
+					</article>
+					<article>
+						<blockquote>
+							<p>Thank you so much for your help. Techium company is awesome!<cite>Dorrie S.
+								</cite></p>
+						</blockquote>
+					</article>
+					<article>
+						<blockquote>
+							<p>I love your system. Definitely worth the investment. I'd be lost without Techium company.
+								<cite>Sven H.</cite>
+							</p>
+						</blockquote>
+					</article>
+				</div>
 			</div>
 		</section>
 
@@ -207,8 +207,9 @@
 		</section>
 	</main>
 
-	<!-- Footer -->
+	<!--Footer-->
 	<footer>
+		<p>234 Washington Street<br> Urbana, Illinois</p>
 		<div>
 			<ul>
 				<a href="#">Terms of Use</a>
@@ -225,8 +226,6 @@
 				<li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
 			</ul>
 		</div>
-		<!-- Address added to the footer -->
-		<p>234 Washington Street<br> Urbana, Illinois</p>
 	</footer>
 </body>
 
