--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -209,7 +209,7 @@
 
 	<!--Footer-->
 	<footer>
-		<img src="logo-black.png" alt="Techium logo" width="160" height="40"
+		<img src="logo-black.png" alt="Techium logo" width="160" height="40">
 		<p>234 Washington Street<br> Urbana, Illinois</p>
 		<div>
 			<ul>
