--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -114,9 +114,11 @@
 			</code></pre>
 			</div>
 			<div>
-				<p>Curabitur sit amet turpis cursus massa mollis <b>highlighted</b>. Duis finibus leo massa, eget dapibus erat
-					finibus sed. Aenean condimentum sapien magna, eleifend <b>highlighted</b> mi consequat ut. Cras nec quam
-					sed sapien ultricies <b>highlighted</b> ut sed metus.</p>
+				<p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget
+					dapibus erat
+					finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec
+					quam
+					sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
 			</div>
 		</section>
 	</main>
