--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -106,7 +106,7 @@
 			</div>
 		</section>
 		<!-- Works section -->
-		<section id="works" class="section" data-section-theme="dark">
+		<section id="works" class="section section-works" data-section-theme="dark">
 			<div class="container">
 				<header class="section-header">
 					<h2 class="section-title">Works</h2>
@@ -155,7 +155,7 @@
 			</div>
 		</section>
 		<!-- About Us section -->
-		<section id="about" class="section">
+		<section id="about" class="section section-about-us">
 			<div class="container">
 				<header class="section-header">
 					<h2 class="section-title">About Us</h2>
@@ -188,7 +188,7 @@
 			</div>
 		</section>
 		<!-- Latest news section -->
-		<section id="latest_news" class="section">
+		<section id="latest_news" class="section section-latest-news">
 			<div class="container">
 				<header class="section-header">
 					<h2 class="section-title">Latest News</h2>
@@ -238,7 +238,7 @@
 			</div>
 		</section>
 		<!-- Testimonials section -->
-		<section id="testimonial" class="section">
+		<section id="testimonial" class="section section-testimonial">
 			<div class="container">
 				<header class="section-header">
 					<h2 class="section-title">Testimonials</h2>
@@ -282,7 +282,7 @@
 			</div>
 		</section>
 		<!-- Contact section -->
-		<section id="contact" class="section">
+		<section id="contact" class="section section-contact">
 			<div class="container">
 				<header class="section-header">
 					<h2 class="section-title">Contact</h2>
