--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -104,7 +104,7 @@
 						<h2>Piso igitur hoc modo, vir optimus tuique, ut scis, amantissimus.</h2>
 						<p>Apparet statim, quae sint officia, quae actiones. Quae in controversiam veniunt, de iis, si placet,
 							disseramus.</p>
-						<a href="https://www.holbertonschool.com/" target="_blank" rel="">Apparet statim, quae sint officia, quae
+						<a href="https://www.holbertonschool.com/" target="_blank" rel="noopener noreferrer">Apparet statim, quae sint officia, quae
 							actiones.</a>
 						<ul>
 							<li>Tubulum fuisse, qua illum, cuius is condemnatus est rogatione, P.</li>
