--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -90,7 +90,7 @@
 						<figure>
 							<img src="/images/test.jpg"
 								alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer"
-								style="width: 620; height: 350;" />
+								style="width: 620px; height: 350px;" />
 							<figcaption class="img-caption">Pugnant Stoici cum Peripateticis. Prioris generis est docilitas
 							</figcaption>
 						</figure>
