--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -90,7 +90,7 @@
 						<figure>
 							<img src="/images/test.jpg"
 								alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer"
-								style="width: 620px; height: 350px;" />
+								width="620" height="350px" />
 							<figcaption class="img-caption">Pugnant Stoici cum Peripateticis. Prioris generis est docilitas
 							</figcaption>
 						</figure>
@@ -104,8 +104,8 @@
 						<h2>Piso igitur hoc modo, vir optimus tuique, ut scis, amantissimus.</h2>
 						<p>Apparet statim, quae sint officia, quae actiones. Quae in controversiam veniunt, de iis, si placet,
 							disseramus.</p>
-						<a href="https://www.holbertonschool.com/" target="_blank" rel="noopener noreferrer">Apparet statim, quae sint officia, quae
-							actiones.</a>
+						<p><a href="https://www.holbertonschool.com/" target="_blank" rel="noopener noreferrer">Apparet statim, quae sint officia, quae
+							actiones.</a></p>
 						<ul>
 							<li>Tubulum fuisse, qua illum, cuius is condemnatus est rogatione, P.</li>
 							<li>Quis est autem dignus nomine hominis, qui unum diem totum velit esse in genere isto voluptatis?</li>
