--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -90,7 +90,7 @@
 						<figure>
 							<img src="/images/test.jpg"
 								alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer"
-								width="620" height="350px" />
+								width="620" height="350" />
 							<figcaption class="img-caption">Pugnant Stoici cum Peripateticis. Prioris generis est docilitas
 							</figcaption>
 						</figure>
