--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -102,10 +102,9 @@
 						</blockquote>
 						<p>Omnia contraria, quos etiam insanos esse vultis. Tibi hoc incredibile, quod beatissimum.</p>
 						<h2>Piso igitur hoc modo, vir optimus tuique, ut scis, amantissimus.</h2>
-						<p>Apparet statim, quae sint officia, quae actiones. Quae in controversiam veniunt, de iis, si placet,
+						<p><a href="https://www.holbertonschool.com/" target="_blank" rel="noopener noreferrer">Apparet statim, quae sint officia, quae
+							actiones.</a> Quae in controversiam veniunt, de iis, si placet,
 							disseramus.</p>
-						<p><link href="https://www.holbertonschool.com/" target="_blank" rel="noopener noreferrer" />Apparet statim, quae sint officia, quae
-							actiones.</p>
 						<ul>
 							<li>Tubulum fuisse, qua illum, cuius is condemnatus est rogatione, P.</li>
 							<li>Quis est autem dignus nomine hominis, qui unum diem totum velit esse in genere isto voluptatis?</li>
