--- a/form/02-article.html
+++ b/form/02-article.html
@@ -168,14 +168,14 @@
 						<p>All fields are required.</p>
 					</header>
 					<form action="#" method="post">
-						<fieldset class="visually-hidden">
-							<legend>Your personnal information</legend>
+						<fieldset>
+							<legend class="visually-hidden">Your personnal information</legend>
 							<div class="form-group col-1-2"></div>
 							<div class="form-group col-1-2"></div>
 							<div class="form-group col-2-3"></div>
 						</fieldset>
-						<fieldset class="visually-hidden">
-							<legend>Your comment</legend>
+						<fieldset>
+							<legend class="visually-hidden">Your comment</legend>
 							<div class="form-group col-2-3"></div>
 							<div class="form-group col-2-3"></div>
 							<div class="form-group"></div>
