--- a/form/02-article.html
+++ b/form/02-article.html
@@ -169,7 +169,7 @@
 					</header>
 					<form action="#" method="post">
 						<fieldset>
-							<legend class="visually-hidden">Your personnal information</legend>
+							<legend class="visually-hidden">Your personal information</legend>
 							<div class="form-group col-1-2"></div>
 							<div class="form-group col-1-2"></div>
 							<div class="form-group col-2-3"></div>
