--- a/form/03-article.html
+++ b/form/03-article.html
@@ -182,7 +182,12 @@
 									<span class="form-field-container"></span>
 								</div>
 							</div>
-							<div class="form-group col-2-3"></div>
+							<div class="form-group col-2-3">
+								<label for="your-email">Email</label>
+								<div class="form-field">
+									<span class="form-field"></span>
+								</div>
+							</div>
 						</fieldset>
 						<fieldset>
 							<legend class="visually-hidden">Your comment</legend>
