--- a/form/03-article.html
+++ b/form/03-article.html
@@ -185,7 +185,7 @@
 							<div class="form-group col-2-3">
 								<label for="your-email">Email</label>
 								<div class="form-field">
-									<span class="form-field"></span>
+									<span class="form-field-container"></span>
 								</div>
 							</div>
 						</fieldset>
