--- a/form/07-article.html
+++ b/form/07-article.html
@@ -47,7 +47,7 @@
 						</li>
 						<li class="nav-item">
 							<form action="#" method="post" class="form-search">
-								<input type="search" name="q" id=".search-input" placeholder="Search..." aria-label="Search through site content">
+								<input type="search" name="q" id="search-input" placeholder="Search..." aria-label="Search through site content">
 								<button class="search-button"><svg viewbox="0 0 512 512" xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="search-icon">
 									<title>
 										Search icon
