--- a/responsive_design/04-index.html
+++ b/responsive_design/04-index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Description of the page less than 150 characters">
 	<link rel="icon" type="image/png" href="images/favicon.jpg">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-	<link rel='stylesheet' href='03-styles.css'>
+	<link rel='stylesheet' href='04-styles.css'>
 </head>
 
 <body>
@@ -184,9 +184,9 @@
 					<div class="row">
 						<div class="col-1-2">
 							<img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
-							./images/pic-about-01_nojdpk_c_scale,w_380.jpg 380w,
-							./images/pic-about-01_nojdpk_c_scale,w_1065.jpg 1065w,
-							./images/pic-about-01_nojdpk_c_scale,w_1200.jpg 1200w" src="./images/pic-about-01_nojdpk_c_scale,w_1200.jpg" alt="">
+pic-about-01_nojdpk_c_scale,w_380.jpg 380w,
+pic-about-01_nojdpk_c_scale,w_1065.jpg 1065w,
+pic-about-01_nojdpk_c_scale,w_1200.jpg 1200w" src="pic-about-01_nojdpk_c_scale,w_1200.jpg" alt="">
 						</div>
 						<div class="col-1-2">
 							<h3>Who are we</h3>
@@ -221,9 +221,9 @@
 							<article class="card-blog">
 								<div>
 									<img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
-									./images/pic-article-01_fbdfdu_c_scale,w_380.jpg 380w,
-									./images/pic-article-01_fbdfdu_c_scale,w_875.jpg 875w,
-									./images/pic-article-01_fbdfdu_c_scale,w_1200.jpg 1200w" src="./images/pic-article-01_fbdfdu_c_scale,w_1200.jpg" alt="">
+									pic-article-01_fbdfdu_c_scale,w_380.jpg 380w,
+									pic-article-01_fbdfdu_c_scale,w_875.jpg 875w,
+									pic-article-01_fbdfdu_c_scale,w_1200.jpg 1200w" src="pic-article-01_fbdfdu_c_scale,w_1200.jpg" alt="">
 								</div>
 								<p class="card-category">Career</p>
 								<h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -236,9 +236,9 @@
 							<article class="card-blog">
 								<div>
 									<img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
-									./images/pic-article-02_uitvrw_c_scale,w_380.jpg 380w,
-									./images/pic-article-02_uitvrw_c_scale,w_852.jpg 852w,
-									./images/pic-article-02_uitvrw_c_scale,w_1200.jpg 1200w" src="./images/pic-article-02_uitvrw_c_scale,w_1200.jpg" alt="">
+pic-article-02_uitvrw_c_scale,w_380.jpg 380w,
+pic-article-02_uitvrw_c_scale,w_852.jpg 852w,
+pic-article-02_uitvrw_c_scale,w_1200.jpg 1200w" src="pic-article-02_uitvrw_c_scale,w_1200.jpg" alt="">
 								</div>
 								<p class="card-category">Digital Life</p>
 								<h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -254,10 +254,10 @@
 									<img
 sizes="(max-width: 3000px) 40vw, 1200px"
 srcset="
-./images/pic-article-03_i8jqar_c_scale,w_380.jpg 380w,
-./images/pic-article-03_i8jqar_c_scale,w_953.jpg 953w,
-./images/pic-article-03_i8jqar_c_scale,w_1200.jpg 1200w"
-src="./images/pic-article-03_i8jqar_c_scale,w_1200.jpg"
+pic-article-03_i8jqar_c_scale,w_380.jpg 380w,
+pic-article-03_i8jqar_c_scale,w_953.jpg 953w,
+pic-article-03_i8jqar_c_scale,w_1200.jpg 1200w"
+src="pic-article-03_i8jqar_c_scale,w_1200.jpg"
 alt="">
 								</div>
 								<p class="card-category">Social</p>
