--- a/responsive_design/03-index.html
+++ b/responsive_design/03-index.html
@@ -186,7 +186,8 @@
 							<img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
 							./images/pic-about-01_nojdpk_c_scale,w_380.jpg 380w,
 							./images/pic-about-01_nojdpk_c_scale,w_1065.jpg 1065w,
-							./images/pic-about-01_nojdpk_c_scale,w_1200.jpg 1200w" src="./images/pic-about-01_nojdpk_c_scale,w_1200.jpg" alt="">
+							./images/pic-about-01_nojdpk_c_scale,w_1200.jpg 1200w" src="./images/pic-about-01_nojdpk_c_scale,w_1200.jpg"
+								alt="">
 						</div>
 						<div class="col-1-2">
 							<h3>Who are we</h3>
@@ -223,7 +224,8 @@
 									<img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
 									./images/pic-article-01_fbdfdu_c_scale,w_380.jpg 380w,
 									./images/pic-article-01_fbdfdu_c_scale,w_875.jpg 875w,
-									./images/pic-article-01_fbdfdu_c_scale,w_1200.jpg 1200w" src="./images/pic-article-01_fbdfdu_c_scale,w_1200.jpg" alt="">
+									./images/pic-article-01_fbdfdu_c_scale,w_1200.jpg 1200w"
+										src="./images/pic-article-01_fbdfdu_c_scale,w_1200.jpg" alt="">
 								</div>
 								<p class="card-category">Career</p>
 								<h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -238,7 +240,8 @@
 									<img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
 									./images/pic-article-02_uitvrw_c_scale,w_380.jpg 380w,
 									./images/pic-article-02_uitvrw_c_scale,w_852.jpg 852w,
-									./images/pic-article-02_uitvrw_c_scale,w_1200.jpg 1200w" src="./images/pic-article-02_uitvrw_c_scale,w_1200.jpg" alt="">
+									./images/pic-article-02_uitvrw_c_scale,w_1200.jpg 1200w"
+										src="./images/pic-article-02_uitvrw_c_scale,w_1200.jpg" alt="">
 								</div>
 								<p class="card-category">Digital Life</p>
 								<h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -251,14 +254,11 @@
 						<li class="col-1-3">
 							<article class="card-blog">
 								<div>
-									<img
-sizes="(max-width: 3000px) 40vw, 1200px"
-srcset="
+									<img sizes="(max-width: 3000px) 40vw, 1200px" srcset="
 ./images/pic-article-03_i8jqar_c_scale,w_380.jpg 380w,
 ./images/pic-article-03_i8jqar_c_scale,w_953.jpg 953w,
-./images/pic-article-03_i8jqar_c_scale,w_1200.jpg 1200w"
-src="./images/pic-article-03_i8jqar_c_scale,w_1200.jpg"
-alt="">
+./images/pic-article-03_i8jqar_c_scale,w_1200.jpg 1200w" src="./images/pic-article-03_i8jqar_c_scale,w_1200.jpg"
+										alt="">
 								</div>
 								<p class="card-category">Social</p>
 								<h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
